# template_cpp_basic

./: .gitignore  CMakeLists.txt  README.md
include/: my_project.h  my_project.hpp
src/: main.c  main.cpp  my_project.c  my_project.cpp
